# narwhal

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md
crates/benchmark/: Cargo.toml
crates/benchmark/src/: main.rs
crates/client/: Cargo.toml
crates/client/src/: auth.rs  config.rs  conn_state.rs  lib.rs  object_pool.rs  types.rs
crates/client/src/compio/: c2s.rs  common.rs  dialer.rs  m2s.rs  mod.rs  s2m.rs
crates/client/src/monoio/: c2s.rs  common.rs  m2s.rs
crates/client/src/tokio/: c2s.rs  common.rs  dialer.rs  m2s.rs  mod.rs  s2m.rs
crates/common/: Cargo.toml
crates/common/src/: conn.rs  core_dispatcher.rs  lib.rs  runtime.rs
crates/common/src/conn/: compio_io.rs  mod.rs  monoio_io.rs
crates/modulator/: Cargo.toml
crates/modulator/src/: client.rs  config.rs  conn.rs  lib.rs  listener.rs  modulator.rs
crates/modulator/tests/: m2s_tests.rs  s2m_tests.rs
crates/protocol/: Cargo.toml
crates/protocol-macros/: Cargo.toml
crates/protocol/src/: deserialize.rs  error.rs  event.rs  id.rs  message.rs  serialize.rs  stream.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs  router.rs  telemetry.rs
crates/server/src/c2s/: config.rs  conn.rs  listener.rs  mod.rs  router.rs
crates/server/src/channel/: fifo_cursor.rs  file_message_log.rs  file_store.rs  manager.rs  membership.rs  mod.rs  store.rs
crates/server/src/router/: mod.rs
crates/server/src/telemetry/: mod.rs
crates/server/src/util/: file.rs  mod.rs  tls.rs
crates/server/tests/: c2s_channel_persistence.rs  c2s_channel_persistence_failure.rs  c2s_client_api.rs  c2s_fifo_channel.rs  c2s_modulator_tests.rs  c2s_tests.rs
crates/test-util/: Cargo.toml
crates/test-util/src/: c2s_suite.rs  lib.rs  m2s_suite.rs  mock.rs  modulator.rs  s2m_suite.rs  tls.rs
crates/util/: Cargo.toml
crates/util/src/: backoff.rs  codec_compio.rs  codec_tokio.rs  lib.rs  pool.rs
docs/: BENCHMARK.md  PROTOCOL.md  protocol.md
docs/architecture/: ACTOR_SHARDING.md  CHANNEL_STORE.md  FIFO_CHANNELS.md  MESSAGE_LOG.md  actor-sharding.md  fifo-channels.md
docs/architecture/channels/: channel-store.md  fifo-channels.md  message-log.md
docs/architecture/runtime/: actor-sharding.md
examples/modulator/broadcast-payload-csv-validator/: Cargo.toml
examples/modulator/broadcast-payload-csv-validator/src/: main.rs
examples/modulator/broadcast-payload-json-validator/: Cargo.toml
examples/modulator/broadcast-payload-json-validator/src/: main.rs
examples/modulator/plain-authenticator/: Cargo.toml
examples/modulator/plain-authenticator/src/: main.rs
examples/modulator/private-payload-sender/: Cargo.toml
examples/modulator/private-payload-sender/src/: main.rs
