[package]
name = "narwhal-benchmark"
version = "0.4.0"
edition = "2024"
license = "BSD-3-Clause"

[[bin]]
name = "narwhal-bench"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.101"
async-channel = "2.5.0"
async-lock = "3.4.2"
clap = { version = "4.5.59", features = ["derive"] }
compio = { version = "0.18.0", features = ["runtime", "time"] }
compio-tls = { version = "0.9.0", features = ["rustls"] }
futures = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
rustls = "0.23.36"
pki-types = { package = "rustls-pki-types", version = "1.14.0" }
webpki-roots = "1.0.6"
hdrhistogram = "7.5.4"
indicatif = "0.18.4"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["fmt"] }
rand = "0.10.0"

# Internal dependencies
narwhal-client = { path = "../client" }
narwhal-protocol = { path = "../protocol" }
narwhal-util = { path = "../util" }
