[package]
name = "narwhal-common"
version = "0.4.0"
edition = "2024"
license = "BSD-3-Clause"

[dependencies]
anyhow = "1.0.101"
async-channel = "2.5.0"
async-lock = "3.4.2"
async-trait = "0.1.89"
compio = { version = "0.18.0", features = ["time"] }
futures = "0.3.32"
tokio-util = { version = "0.7.18", features = ["rt", "codec"] }
tracing = "0.1.44"
rand = "0.9.2"
slab = "0.4.12"
narwhal-protocol = { path = "../protocol" }
narwhal-util = { path = "../util" }
