[package]
name = "narwhal-common"
version = "0.5.0"
edition = "2024"
license = "BSD-3-Clause"

[dependencies]
anyhow = "1.0.101"
core_affinity = "0.8.3"
async-channel = "2.5.0"
async-trait = "0.1.89"
libc = "0.2.182"
monoio = { version = "0.2.4", features = ["bytes"] }
futures = "0.3.32"
tokio-util = { version = "0.7.18", features = ["rt", "codec"] }
tracing = "0.1.44"
rand = "0.10.0"
slab = "0.4.12"
narwhal-protocol = { path = "../protocol" }
narwhal-util = { path = "../util" }
