[package]
name = "narwhal-modulator"
version = "0.5.0"
edition = "2024"
license = "BSD-3-Clause"

[dependencies]
anyhow = "1.0.101"
async-channel = "2.5.0"
async-lock = "3.4.2"
async-trait = "0.1.89"
compio = { version = "0.18", features = ["runtime", "time", "net", "io"] }
futures = "0.3.32"
humantime-serde = "1.1.1"
parking_lot = "0.12.5"
serde = { version = "1.0.228", features = ["derive"] }
socket2 = { version = "0.6.0", features = ["all"] }
tracing = "0.1.44"
async-broadcast = "0.7.2"
narwhal-client = { path = "../client" }
narwhal-common = { path = "../common" }
narwhal-protocol = { path = "../protocol" }
narwhal-util = { path = "../util" }
prometheus-client = "0.24"

[dev-dependencies]
compio = { version = "0.18", features = ["macros"] }
narwhal-test-util = { path = "../test-util" }
