[package]
name = "narwhal-protocol"
version = "0.6.0"
edition = "2024"
license = "BSD-3-Clause"

[features]
serde = ["dep:serde"]

[dependencies]
anyhow = "1.0.101"
once_cell = "1.21.3"
regex = "1.12.3"
futures = "0.3.32"
serde = { version = "1.0.228", optional = true }
narwhal-protocol-macros = { path = "../protocol-macros" }
narwhal-util = { path = "../util" }
