[package]
name = "narwhal-server"
version = "0.4.0"
edition = "2024"
license = "BSD-3-Clause"

# Binary target for the main binary
[[bin]]
name = "narwhal"
path = "bin/main.rs"

[dependencies]
anyhow = "1.0.101"
async-channel = "2.5.0"
async-lock = "3.4.2"
async-trait = "0.1.89"
compio = { version = "0.18.0", features = ["dispatcher", "net", "time"] }
compio-signal = "0.9.0"
compio-tls = { version = "0.9.0", features = ["rustls"] }
core_affinity = "0.8.3"
clap = { version = "4.5.59", features = ["derive"] }
dashmap = "6.1.0"
humantime-serde = "1.1.1"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.12"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["json", "time"] }
async-broadcast = "0.7.2"
futures = "0.3.32"
parking_lot = "0.12.5"
rcgen = "0.14.7"
rustls = "0.23.36"
socket2 = "0.6.2"
libc = "0.2.182"
narwhal-common = { path = "../common" }
narwhal-modulator = { path = "../modulator" }
narwhal-protocol = { path = "../protocol" }
narwhal-util = { path = "../util" }
rlimit = "0.10.2"

[dev-dependencies]
compio = { version = "0.18.0", features = ["macros", "time"] }
pki-types = { package = "rustls-pki-types", version = "1" }
narwhal-client = { path = "../client" }
narwhal-test-util = { path = "../test-util" }
