[package]
name = "narwhal-test-util"
version = "0.5.0"
edition = "2024"
license = "BSD-3-Clause"

[dependencies]
anyhow = "1.0.101"
async-trait = "0.1.89"
monoio = { version = "0.2.4", features = ["bytes"] }
monoio-rustls = "0.4.0"
futures = "0.3.32"
async-broadcast = "0.7.2"
async-channel = "2.5.0"
narwhal-client = { path = "../client" }
narwhal-common = { path = "../common" }
narwhal-modulator = { path = "../modulator" }
narwhal-protocol = { path = "../protocol" }
prometheus-client = "0.24"
narwhal-server = { path = "../server" }
narwhal-util = { path = "../util" }
pki-types = { package = "rustls-pki-types", version = "1" }
rustls = "0.23.36"
webpki-roots = "1.0.6"
