[package]
name = "narwhal-util"
version = "0.4.0"
edition = "2024"
license = "BSD-3-Clause"

[dependencies]
anyhow = "1.0.101"
bytes = "1.11.1"
crossbeam-queue = "0.3.12"
compio = { version = "0.18.0", features = ["io"] }
compio-buf = { version = "0.8.0", features = ["bytes"] }
string_cache = "0.9.0"
rand = "0.9.2"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "net", "time"] }
futures = "0.3.32"
