[package]
name = "narwhal-util"
version = "0.5.0"
edition = "2024"
license = "BSD-3-Clause"

[dependencies]
anyhow = "1.0.101"
bytes = "1.11.1"
crossbeam-queue = "0.3.12"
compio = { version = "0.18", features = ["runtime", "time", "io", "macros"] }
string_cache = "0.9.0"
rand = "0.10.0"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "net", "time", "sync"] }
futures = "0.3.32"
