[package]
name = "broadcast-payload-csv-validator"
version = "0.3.0"
edition = "2024"
license = "BSD-3-Clause"

[dependencies]
async-trait = "0.1.88"
clap = { version = "4", features = ["derive"] }
csv = "1.3.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
anyhow = "1.0.98"
toml = "0.9.8"
compio = { version = "0.18.0", features = ["runtime"] }
compio-signal = "0.9.0"
futures = "0.3.31"
libc = "0.2"
narwhal-modulator = { path = "../../../crates/modulator" }
narwhal-protocol = { path = "../../../crates/protocol" }
narwhal-util = { path = "../../../crates/util" }
