[package]
name = "broadcast-payload-csv-validator"
version = "0.3.0"
edition = "2024"
license = "BSD-3-Clause"

[dependencies]
async-trait = "0.1.88"
clap = { version = "4", features = ["derive"] }
csv = "1.3.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
anyhow = "1.0.98"
toml = "0.9.8"
async-channel = "2"
monoio = { version = "0.2.4", features = ["signal"] }
signal-hook = "0.3"
narwhal-modulator = { path = "../../../crates/modulator" }
narwhal-common = { path = "../../../crates/common" }
narwhal-protocol = { path = "../../../crates/protocol" }
narwhal-util = { path = "../../../crates/util" }
