[package]
name = "broadcast-payload-json-validator"
description = "A JSON payload validator for Narwhal protocol"
version = "0.3.0"
edition = "2024"
license = "BSD-3-Clause"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.88"
clap = { version = "4", features = ["derive"] }
async-channel = "2"
monoio = { version = "0.2.4", features = ["signal"] }
signal-hook = "0.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0.140"
toml = "0.9.8"
narwhal-modulator = { path = "../../../crates/modulator" }
narwhal-common = { path = "../../../crates/common" }
narwhal-protocol = { path = "../../../crates/protocol" }
narwhal-util = { path = "../../../crates/util" }
