[package]
name = "plain-authenticator"
version = "0.3.0"
edition = "2024"
license = "BSD-3-Clause"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.88"
base64 = "0.21"
clap = { version = "4", features = ["derive"] }
toml = "0.9.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
async-channel = "2"
monoio = { version = "0.2.4", features = ["signal"] }
signal-hook = "0.3"
prometheus-client = "0.24"
narwhal-modulator = { path = "../../../crates/modulator" }
narwhal-common = { path = "../../../crates/common" }
narwhal-protocol = { path = "../../../crates/protocol" }
narwhal-util = { path = "../../../crates/util" }
