[package]
name = "private-payload-sender"
version = "0.3.0"
edition = "2024"
license = "BSD-3-Clause"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.88"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
toml = "0.9.8"
tracing = "0.1.41"
serde_json = "1.0.140"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
async-broadcast = "0.7.2"
compio = { version = "0.18.0", features = ["runtime", "time"] }
compio-signal = "0.9.0"
futures = "0.3.31"
libc = "0.2"
narwhal-modulator = { path = "../../../crates/modulator" }
narwhal-protocol = { path = "../../../crates/protocol" }
narwhal-util = { path = "../../../crates/util" }
